--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@headlessui/react": "^1.0.0",
     "@heroicons/react": "^1.0.1",
     "@recordreplay/protocol": "^0.8.2",
+    "@recordreplay/recordings-cli": "^0.3.1",
     "@sentry/react": "^6.8.0",
     "@sentry/tracing": "^6.8.0",
     "@tailwindcss/forms": "^0.3.2",
