--- a/package.json
+++ b/package.json
@@ -116,6 +116,8 @@
     "postcss-loader": "^4.2.0",
     "postcss-url-mapper": "^1.2.0",
     "tailwindcss": "^2.1.1",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3",
     "webpack-dev-server": "^3.11.0",
     "webpack-visualizer-plugin": "^0.1.11"
