--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "autoprefixer": "^10.2.5",
