--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3",
     "webpack-dev-server": "^3.11.0",
+    "webpack-retry-chunk-load-plugin": "^1.5.0",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "browserslist": [
