--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "@webpack-cli/serve": "^1.5.1",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
