--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-devtools-inline": "^4.13.0",
     "react-dom": "0.0.0-experimental-79740da4c",
     "react-dom-factories": "^1.0.2",
+    "react-lazyload": "^3.2.0",
     "react-markdown": "^5.0.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^5.2.0",
@@ -87,6 +88,7 @@
     "@types/mixpanel-browser": "^2.35.6",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^17.0.0",
+    "@types/react-lazyload": "^3.1.1",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.1",
