--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@recordreplay/recordings-cli": "^0.3.1",
     "@sentry/react": "^6.8.0",
     "@sentry/tracing": "^6.8.0",
+    "@stripe/react-stripe-js": "^1.4.1",
+    "@stripe/stripe-js": "^1.17.1",
     "@tailwindcss/forms": "^0.3.2",
     "apollo-link-http": "^1.5.17",
     "base64-arraybuffer": "^0.2.0",
